# analytics-copilot

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
docs/: data_dictionary.md  decision_support_note.md  kpi_definitions.md  problem_statement.md
notebooks/: 01_data_audit.ipynb
src/: data_loader.py
